<resources>
    <string name="app_name">Mvvm demo</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rs">\u20B9 %1$s</string>
    <string name="full_lifetime_access">Full lifetime access</string>
    <string name="access_on_mobile_desktop_and_tv">Access on mobile, desktop, and TV</string>
    <string name="certificate_of_completion">Certificate of Completion</string>
    <string name="hours_on_demand_video">%1$s total hours on-demand video</string>
    <string name="this_course_includes">This Course Includes</string>
    <string name="what_will_i_learn">What Will I Learn?</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add_to_wishlist">ADD TO WISHLIST</string>
    <string name="description">Description</string>
    <string name="detailed_description"><b>Become a Python Programmer and learn one of employer\'s most requested skills of 2020!</b> \n\nThis is the <b>most comprehensive, yet straight-forward, course for the Python programming language on Udemy!</b> Whether you have never programmed before, already know basic syntax, or want to learn about the advanced features of Python, this course is for you! In this course we will <b>teach you Python 3.</b> \n\nWith <b>over 100 lectures</b> and more than 21 hours of video this comprehensive course leaves no stone unturned! This course includes quizzes, tests, coding exercises and homework assignments as well as 3 major projects to create a Python project portfolio! \n\n<b>Learn how to use Python for real-world tasks, such as working with PDF Files, sending mails, reading Excel files, Scraping websites for informations, working with image files, and much more!</b> \n\nThis course will teach you Python in a practical manner, with every lecture comes a full coding screencast and a corresponding code notebook! Learn in whatever manner is best for you!\n\nWe will start by helping you get Python installed on your computer, regardless of your operating system, whether its Linux, MacOS, or Windows, we\'ve got you covered. \n\n
</string>
    <string name="requirements">Requirements</string>
    <string name="curriculum">Curriculum</string>
    <string name="course_curriculum">Lectures (%1$d) Total (%2$s)</string>
    <string name="lecture_type_length">%1$s - %2$s</string>
    <string name="teacher">Created by %1$s</string>
    <string name="students">%1$s Students</string>
    <string name="course">%1$d Courses</string>
    <string name="averageRating">%1$s Average Rating</string>
    <string name="show_more">SHOW MORE</string>
    <string name="view_profile">View profile</string>
    <string name="teacher_s_image">Teacher\'s image</string>
    <string name="course_video">Course Video</string>
    <string name="show_less">SHOW LESS</string>
    <string name="rating">(%1$s)</string>
    <string name="share">share</string>
    <string name="cart">cart</string>
</resources>