<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.course.CourseDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/courseDetailBackground"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="45dp"
            android:paddingEnd="16dp"
            android:paddingBottom="100dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/course_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/course_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/course_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/course_highlights_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/course_description" />

        </LinearLayout>


        <ImageView
            android:id="@+id/course_image_view"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/image_view_shape"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear" />

        <TextView
            android:id="@+id/course_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:text="@string/Rs"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/course_image_view" />

        <Button
            android:id="@+id/couse_buy_now"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/image_view_shape"
            android:backgroundTint="@color/bottomNavIconSelected"
            android:text="@string/buy_now"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/course_price"
            app:layout_constraintStart_toStartOf="@id/course_price"
            app:layout_constraintTop_toBottomOf="@id/course_price" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:background="@color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toStartOf="@id/wish"
            app:layout_constraintStart_toStartOf="@id/couse_buy_now"
            app:layout_constraintTop_toBottomOf="@id/couse_buy_now">

            <TextView
                android:id="@+id/course_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/wish"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="@id/couse_buy_now"
            app:layout_constraintStart_toEndOf="@id/cart"
            app:layout_constraintTop_toBottomOf="@id/couse_buy_now">

            <TextView
                android:id="@+id/course_add_to_wish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/add_to_wishlist"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cart"
            app:layout_constraintStart_toStartOf="@id/cart"
            app:layout_constraintEnd_toEndOf="@id/wish"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="20dp"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_course_includes"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/course_hours_on_demand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:textColor="@color/black"
                    android:text="@string/hours_on_demand_video"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_on_demand_video" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:text="@string/full_lifetime_access"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_full_access" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:text="@string/access_on_mobile_desktop_and_tv"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_phone" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:text="@string/certificate_of_completion"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_certificate" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>