<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light">

    <EditText
        android:id="@+id/register_username_edittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/register_email_edittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="@+id/register_username_edittext"
        app:layout_constraintStart_toStartOf="@+id/register_username_edittext"
        app:layout_constraintTop_toBottomOf="@+id/register_username_edittext" />

    <EditText
        android:id="@+id/register_password_edittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="@+id/register_email_edittext"
        app:layout_constraintStart_toStartOf="@+id/register_email_edittext"
        app:layout_constraintTop_toBottomOf="@id/register_email_edittext" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="@id/register_password_edittext"
        app:layout_constraintStart_toStartOf="@id/register_password_edittext"
        app:layout_constraintTop_toBottomOf="@id/register_password_edittext"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:text="Register"
        android:enabled="false"
        android:textColor="#BDBDBD"
        android:backgroundTint="@android:color/holo_orange_dark" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:indeterminateTint="#ffffff"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="@id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toTopOf="@id/register_button" />

    <TextView
        android:id="@+id/have_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/register_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>